fixed z-index location pin, tooltip mobile

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -88,5 +88,6 @@
     @media screen and (max-width: $mobileScreen) {
         background-color: $colorFooterResp;
         height: auto;
+        padding-bottom: 1rem;
     }
 }
