--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -68,6 +68,7 @@
             position: relative;
             text-align: left;
             opacity: 1;
+            z-index: 1;
         }
 
         .tooltip .right {
@@ -101,9 +102,11 @@
             align-items: center;
 
             @media screen and (max-width: $mobileScreen) {
-                top: 9rem;
-                left: -75px;
-                width: 15rem;
+                top: 19rem;
+                left: 0px;
+                margin-left: 0px;
+                width: 100vw;
+                position: fixed;
             }
         }
 
